--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ logback = "1.5.8"
 exposed = "0.55.0"
 h2 = "2.3.232"
 koin = "4.0.0"
+password4j = "1.8.2"
 
 [libraries]
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
@@ -15,6 +16,7 @@ kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-ktor = { module = "io.insert-koin:koin-ktor", version.ref = "koin" }
 koin-logger-slf4j = { module = "io.insert-koin:koin-logger-slf4j", version.ref = "koin" }
+password4j = { module = "com.password4j:password4j", version.ref = "password4j" }
 
 [bundles]
 exposed = ["exposed-core", "exposed-jdbc"]
