--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 kotlin = "2.0.20"
 ktor = "2.3.12"
+kotlinx-datetime = "0.6.1"
 logback = "1.5.8"
 exposed = "0.55.0"
 h2 = "2.3.232"
@@ -8,6 +9,7 @@ koin = "4.0.0"
 password4j = "1.8.2"
 
 [libraries]
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
